--- a/templates/product/product_list_base.html
+++ b/templates/product/product_list_base.html
@@ -96,6 +96,9 @@
 {% endblock %}
 
 {% block content %}
+  <div class="row">
+    
+  </div>
   <div id="product-list-page">
     <div class="row">
       <div class="col-md-4 col-lg-3">
