--- a/templates/base.html
+++ b/templates/base.html
@@ -162,9 +162,8 @@
     </div>
   </header>
 {% endblock %}
-{% block topcontent %}
-{% endblock topcontent %}
 <div class="container maincontent">
+  {% block topcontent %}{% endblock topcontent %}
   {% if messages %}
     {% for message in messages %}
       <div class="alert{% if message.tags %} alert-{{ message.tags }}{% endif %}">
